--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=LaravelStarterPackage
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:NhL5YQwQxiAVeWz1FB9TyTIJy11lPb7K8mHr76ct6+c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://laravelstarterpackage.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=code
+DB_DATABASE=laravelstarterpackage-test
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
